--- a/templates/user/login.html
+++ b/templates/user/login.html
@@ -4,6 +4,8 @@
 
 {% block content %}
 
+{% include "navbar.html" %}
+
 <div class="row">
 
   <div class="col-md-offset-3 col-md-6">
@@ -11,7 +13,7 @@
     <h3>User Login</h3>
 
     {% if error %}
-    <div class="error text-danger">{{ error }}</div>
+      <div class="alert alert-danger" role="alert">{{ error }}</div>
     {% endif %}
 
     {% from "_formhelpers.html" import render_field %}
