--- a/templates/base.html
+++ b/templates/base.html
@@ -17,14 +17,14 @@
     <div class="container">
 
     {% block content %}{% endblock %}
-    
-      <div class="col-md-offset-3 col-md-6">
-        <hr />
-        <footer>
-          &copy; copyright 2016 flaskbook
-        </footer>
-      </div>
       
+    </div>
+    
+    <div class="container">
+      <hr />
+      <footer>
+        &copy; copyright 2016 flaskbook
+      </footer>
     </div>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
