--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -10,10 +10,12 @@
                 {% if session.username %}
                 <li role="presentation" class="dropdown">
                     <a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
-                      @{{ session.username }} <span class="caret"></span>
+                        @{{ session.username }} <span class="caret"></span>
                     </a>
                     <ul class="dropdown-menu">
-                        
+                        <li><a href="{{ url_for('user_app.profile', username=session.username) }}">View Profile</a></li>
+                        <li><a href="{{ url_for('user_app.edit') }}">Edit Profile</a></li>
+                        <li><a href="{{ url_for('user_app.change_password') }}">Change Password</a></li>
                     </ul>
                 </li>                 
                 <li>
