Completed to end of unit 36 - imaging.

--- a/templates/user/profile.html
+++ b/templates/user/profile.html
@@ -11,8 +11,12 @@
 <div class="row">
 
   <div class="col-md-3">
-
-    <img class="img-thumbnail" src="//placehold.it/200x200" width="200" heigh="200" alt="{{ user.username }}">
+    
+    {% if user.profile_image %}
+      <img src="{{ url_for('static', filename=user.profile_imgsrc('xlg')) }}" class="img-thumbnail">
+    {% else %}
+      <img class="img-thumbnail" src="//placehold.it/200x200" width="200" heigh="200" alt="{{ user.username }}">
+    {% endif %}
 
     <h3>{{ user.first_name }} {{ user.last_name }} </h3>
     <h4><a href="{{ url_for('user_app.profile', username=user.username) }}" />@{{ user.username }}</a></h4>
